add total hourgrass