@@ -1,6 +1,7 @@
 import hackerhank.datastructure.DataStructureHackerHank2;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -33,7 +34,10 @@ public class DataStructureHackerHank2Test {
   @Test
   public void testFirstArrayUpValues() throws IOException {
     int expected = 68;
-    List<List<Integer>> input = List.of(List.of(10,20,30), List.of(-100,2,-100), List.of(1,2,3));
+    ArrayList<ArrayList<Integer>> input = new ArrayList<>();
+    input.add(new ArrayList<>(Arrays.asList(10,20,30)));
+    input.add(new ArrayList<>(Arrays.asList(-100,2,-100)));
+    input.add(new ArrayList<>(Arrays.asList(1,2,3)));
     Integer result = DataStructureHackerHank2.Result.sumHourgrass(input);
 
     Assertions.assertEquals(expected, result);
